--- a/Diseño/Contenedor_flex/css/style.css
+++ b/Diseño/Contenedor_flex/css/style.css
@@ -7,6 +7,7 @@
     height: 200px;
     display: flex; /*pone el contenido en fila*/
     flex-direction: column;/*lo pone en columnas*/
+    flex-wrap: wrap;
     margin: 20px auto;
     padding: 10px;
     width: 60%;
