--- a/Diseño/Ejercicio_flex/css/style.css
+++ b/Diseño/Ejercicio_flex/css/style.css
@@ -1,11 +1,19 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
 body {
     font-family: Arial, sans-serif;
+}
+.contenedor {
+    width: 90%;
+    margin: 10px auto;
+}
+main {
+	background-color: grey;
+	width: 100%;
 }
 
 .header {
@@ -16,17 +24,19 @@ body {
     background-color: #2d3e50;
     color: white;
 }
+header .logo a {
+	color:#fff;
+	line-height:50px; 
+}
 
 .logo {
     font-size: 24px;
     text-align: center;
 }
 .imgcss{
-    width: 100px;
-    height: 100px;
-    padding: 10PX;
+    width:50px;
+	vertical-align: top;  
     background-color: white;
-    border-radius: 20%;
 }
 
 .nav {
@@ -52,42 +62,41 @@ body {
     display: flex;
     flex-direction: column;
     gap: 60px;
+    background-color: gray;
+
 }
 
 .text-block {
     padding: 10px;
 }
 
-.image-content {
-    flex: 1;
+aside {
+	background:chocolate;
+	padding-top:30px;
+	padding-left: 15px;
+	width:20%;
     display: flex;
-    background-color: chocolate;
-    height: 300PX;
-    flex-direction: column;
-   
+	flex-direction: column;
+	align-items: center;
 }
 
-.image-box {
-    /*tienen que ser rectangulares*/
-    flex-basis: 50%;
-    height: 100%;
-}
-.gatos1{
-
-    background-size: cover;
-    height: 80%;
-    width: 90%;
-}
-.gatos2{
-    background-size: cover;
-    height: 80%;
-    width: 90%;
+aside img {
+	height:85%;
+	width:85%;
 }
 
-.footer {
-    padding: 10px;
-    text-align: left;
-    background-color: #2d3e50;
+footer {
+	background:#2c3e50;
+    width: 100%;
+	padding:20px;
+	display: flex;
+	justify-content:space-between;
+}
+
+footer p  {
     color: white;
-    border-radius: 0%;
+}
+
+footer .social img {
+    width: 20px;
 }
