--- a/Diseño/Ejercicio_Grid/css/style.css
+++ b/Diseño/Ejercicio_Grid/css/style.css
@@ -1,5 +1,4 @@
 * {
-	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;        
 }
@@ -11,12 +10,10 @@
 
 header {
 	background:#2c3e50;
-	width:100%;
 	padding:20px;
-
-	/* Flexbox */
-	display: flex;
-	justify-content:space-between;
+    align-items: center;
+    display: grid;
+    grid-template-columns: auto auto;
 }
 
 header .logo {
@@ -35,25 +32,29 @@ header .logo a {
 }
 
 header nav {
-	display:grid;
-	align-items:center;
-	width:50%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
+    background-color:darkred;
+
 }
 
 header nav a {
-	background-color:darkred;
 	color:#fff;
 	padding: 10px 45px;
 }
 
 .contenedor_principal {
-	display: flex; 
+    display: grid;
+    grid-template-columns: 1fr 300px;
+    gap: 20px;
 }
 
 main {
 	background-color: white;
-	width: 80%;
-}
+padding: 0px 40px;}
 
 main article:first-child {
 	padding-bottom: 20px;
@@ -61,29 +62,32 @@ main article:first-child {
 }
 
 article {
- margin:30px;
+    margin:10px;
 }
 
 aside {
 	background:chocolate;
-	padding-top:30px;
-	padding-left: 15px;
-	width:20%;
-    display: flex;
-	flex-direction: column;
-	align-items: center;
+    display: grid;
+    grid-template-columns: auto;
+    gap: 10px;
+    padding: 5px 10px;
+    align-items: center;
+    text-align: center;
 }
 
 aside img {
-	height:85%;
-	width:85%;
+	height:70%;
+	width:70%;
 }
 
 footer {
 	background:#2c3e50;
     width: 100%;
 	padding:20px;
-	display: flex;
+	display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+    padding: 15px 30px;
 	justify-content:space-between;
 }
 
