--- a/Diseño/Proyecto_Global/css/css.css
+++ b/Diseño/Proyecto_Global/css/css.css
@@ -1,54 +1,3 @@
-/** {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.contenedor {
-    width: 90%;
-    margin: 10px auto;
-}
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: white;
-    color: black;
-}
-header .logo a {
-	color:black;
-	line-height:100px; 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.logo {
-    font-size: 24px;
-    text-align: center;
-}
-.img{
-    width:100px;
-	vertical-align: top;  
-}
-
-.nav {
-    display: flex;
-    gap: 100px;
-    background-color: chocolate;
-    padding: 15px 30px;
-}
-
-.nav a {
-    color: black;
-    text-decoration: none;
-}
-a:hover {
-    color: blue;
-    }*/
-    /* General Reset */
 * {
     margin: 0;
     padding: 0;
@@ -70,7 +19,6 @@ body {
     padding: 20px;
 }
 
-/* Header */
 .header {
     display: flex;
     justify-content: space-between;
@@ -104,7 +52,6 @@ body {
     text-decoration: underline;
 }
 
-/* Main Content */
 .main-content h1 {
     color: #ff5a5f;
     margin-bottom: 15px;
@@ -121,7 +68,6 @@ body {
     margin-bottom: 15px;
 }
 
-/* Galería */
 .galeria {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -136,10 +82,9 @@ body {
 }
 
 .galeria img:hover {
-    transform: scale(1.05);
+    transform: scale(1.05);/*hace que aumente el tañaño al pasar por encima*/
 }
 
-/* Fiestas Callejeras */
 .fiestas-callejeras {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -180,7 +125,6 @@ body {
     margin: 5px 0;
 }
 
-/* Footer */
 .footer {
     text-align: center;
     margin-top: 20px;
