--- a/Diseño/Proyecto_Global/css/css.css
+++ b/Diseño/Proyecto_Global/css/css.css
@@ -133,3 +133,8 @@ body {
     color: white;
     font-size: 0.9em;
 }
+.footer img{
+    width: 30px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
