--- a/Diseño/Proyecto_Global/css/css.css
+++ b/Diseño/Proyecto_Global/css/css.css
@@ -76,6 +76,8 @@ body {
 
 .galeria img {
     width: 100%;
+    height: 150px; 
+    object-fit: cover; /* Recorta la imagen para llenar el contenedor sin distorsión */
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s;
