--- a/Diseño/Proyecto_Global/css/css.css
+++ b/Diseño/Proyecto_Global/css/css.css
@@ -143,6 +143,11 @@ body {
 }
 .section-cristo {
     margin-top: 40px;
+    text-align: center;
+    background: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform 0.3s;
 }
 
 .section-cristo h3 {
@@ -156,6 +161,12 @@ body {
     flex-wrap: wrap;
     align-items: center;
     gap: 20px;
+    justify-content: center;
+    margin-top: 20px;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    
 }
 
 .cristo-container img {
