--- a/Diseño/Proyecto_Global/css/css.css
+++ b/Diseño/Proyecto_Global/css/css.css
@@ -142,36 +142,40 @@ body {
     vertical-align: middle;
 }
 .section-cristo {
+    flex-direction: column;
     margin-top: 40px;
-    text-align: center;
-    background: #f9f9f9;
+   display:flex;
+   align-items: center;
+   background-color: white;
     padding: 20px;
     border-radius: 10px;
-    transition: transform 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    gap:20px;
 }
 
 .section-cristo h3 {
     color: #ff5a5f;
     margin-bottom: 15px;
-    text-align: left;
+    /* width: 50%;
+    margin-left: 200px; */
 }
 
 .cristo-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row-reverse;
     align-items: center;
+    flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
-    margin-top: 20px;
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    
 }
 
 .cristo-container img {
-    width: 100%;
-    max-width: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 250px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.cristo-texto{
+    flex: 1;
+    text-align: left;
 }
