--- a/Diseño/AishaJuanAracilProenza_UT1_ProyectoGlobal/css/css.css
+++ b/Diseño/AishaJuanAracilProenza_UT1_ProyectoGlobal/css/css.css
@@ -15,7 +15,7 @@ body {
 
 .contenedor {
     margin: 0 auto;
-    padding: 20px;
+    padding: 2px;
     padding-top: 0px;
 }
 
@@ -56,6 +56,14 @@ body {
     color: #ff5a5f;
     margin-bottom: 15px;
 }
+.section-imagen-principal img {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
 
 .section-text p {
     font-size: 1.2em;
@@ -178,4 +186,64 @@ body {
 .cristo-texto{
     flex: 1;
     text-align: left;
+}
+
+@media (max-width: 575px) {
+    .nav {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .galeria {
+        grid-template-columns: 1fr;
+    }
+
+    .cristo-container {
+        flex-direction: column;
+    }
+
+    .fiesta {
+        padding: 15px;
+    }
+}
+
+
+@media (min-width: 576px) and (max-width: 992px) {
+    .nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .galeria {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .cristo-container {
+        flex-direction: row;
+    }
+
+    .fiesta {
+        padding: 20px;
+    }
+}
+
+
+@media (min-width: 993px) {
+    .contenedor {
+        padding: 40px;
+    }
+
+    .nav a {
+        font-size: 1.2em;
+    }
+
+    .galeria {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .section-cristo {
+        padding: 40px;
+    }
 }
